--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<img id="bannerImg" src="walle.jpg">
 		<img id="logo" src="logo.png"> 
 		<h1>The<br>Greatest<br>Outdoors</h1>
-		<h2 id="button"><a href="#cardTitle">Get inspired</a></h2>
+		<h2 id="button"><a href="desc.html">Get inspired</a></h2>
 	</div>
 
 	<h2 class="otherheadings">Live anywhere</h2>
